<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/backLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/innerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="100dp"
        android:background="@drawable/inner_layout"
        android:padding="20dp"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/imageAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/android_description"
            android:src="@drawable/avatar_final"
            android:layout_marginTop="95dp"
            android:layout_centerHorizontal="true"
            android:translationZ="200dp"
            android:outlineAmbientShadowColor="@color/black"
            android:outlineSpotShadowColor="@color/inner_blur"/>

        <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
            android:id="@+id/Segmented_buttonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:elevation="2dp"
            android:background="@color/white"
            app:dividerWidth="0dp"
            app:radius="100dp"
            android:showDividers="none"
            app:draggable="true"
            app:selectedButtonRadius="50dp"
            app:selectedBackground="@color/purple_700"
            android:outlineSpotShadowColor="@color/black"
            android:outlineAmbientShadowColor="@color/black"
            app:ripple="false"
            android:layout_below="@+id/imageAvatar">

            <com.addisonelliott.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                app:selectionAnimationDuration="1000"
                app:drawableGravity="top"
                app:text="@string/login"
                app:selectedTextColor="@color/white"
                app:textColor="@color/black"/>
            <com.addisonelliott.segmentedbutton.SegmentedButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                app:drawableGravity="top"
                app:text="@string/sign_up"
                app:selectedTextColor="@color/white"
                app:textColor="@color/black" />

        </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>

        <ImageButton
            android:id="@+id/twitter_button"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/Segmented_buttonGroup"
            android:translationZ="10dp"
            android:clickable="true"
            android:backgroundTint="@color/white"
            android:background="@drawable/twitter"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/twitter_description"/>

        <ImageButton
            android:id="@+id/facebook_button"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/Segmented_buttonGroup"
            android:contentDescription="@string/facebook_description"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="multiply"
            android:background="@drawable/facebook"
            android:translationZ="10dp"
            android:clickable="true"
            android:layout_toEndOf="@+id/twitter_button"/>

        <ImageButton
            android:id="@+id/google_button"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/Segmented_buttonGroup"
            android:contentDescription="@string/google_description"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="multiply"
            android:background="@drawable/google_plus"
            android:translationZ="10dp"
            android:clickable="true"
            android:layout_toEndOf="@id/facebook_button"/>

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/or_text_view"
            android:layout_below="@+id/google_button"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/username_email_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_email"
            android:layout_below="@+id/orText"
            android:layout_centerHorizontal="true"
            android:textColor="@color/purple_700"
            android:layout_marginTop="15dp"/>

        <EditText
            android:hint="@string/username_hint"
            android:layout_marginTop="20dp"
            android:id="@+id/username_email_edit_text"
            android:layout_below="@+id/username_email_view"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:fontFamily="sans-serif-condensed-medium"
            android:backgroundTint="@color/black"
            android:importantForAutofill="auto"
            android:textDirection="ltr"
            android:maxLength="40"
            android:nextFocusDown="@id/password_text"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PassWord"
            android:layout_below="@+id/username_email_edit_text"
            android:layout_centerHorizontal="true"
            android:textColor="@color/purple_700"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/password_text"
            android:hint="@string/password_hint"
            android:textDirection="ltr"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:importantForAutofill="auto"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:inputType="textPassword"
            android:maxLength="40"
            android:nextFocusDown="@id/done_button"
            android:textColor="@color/white"/>

        <CheckBox
            android:id="@+id/remember_me_checkbox"
            android:layout_below="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me_checkbox"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/done_button"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_height="40dp"
            android:background="@drawable/done_button"
            android:layout_below="@+id/remember_me_checkbox"
            android:drawableEnd="@drawable/arrow_icon"
            android:shadowColor="@color/black"
            android:text="@string/done_button"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_below="@+id/done_button"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:clickable="true"
            android:contextClickable="true"
            android:gravity="center"
            android:textStyle="bold"/>

    </RelativeLayout>

</RelativeLayout>